manifests/applications/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
