manifests/applications/my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: my-app
# annotations:
#   cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: my-app.computas.cloud
      http:
        paths:
          - backend:
              service:
                name: my-app
                port:
                  number: 80
            path: /
            pathType: Prefix
# tls:
#   - hosts:
#       - my-app.computas.cloud
#     secretName: my-app-tls
